test/compilable/imports/test25b.d
module imports.test25b;

import imports.test25a;

import std.c.stdio;

class Bfoo
{
}
