test/fail_compilation/imports/fail10128a.d
class A
{
    import imports.fail10128b;  //std.algorithm;
}
